<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <io.github.nfdz.cryptool.common.widgets.InputTextBoxView
            android:id="@+id/cipher_itb_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <io.github.nfdz.cryptool.common.widgets.InputTextBoxView
                    android:id="@+id/cipher_itb_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <io.github.nfdz.cryptool.common.widgets.OutputTextBoxView
                    android:id="@+id/cipher_otb_processed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/cipher_btn_reverse"
                android:layout_width="@dimen/reverse_icon_size"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                app:srcCompat="@drawable/ic_exchange_arrows"
                android:padding="@dimen/reverse_icon_padding"
                android:background="@drawable/shape_round_box"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>