...
    android:layout_height="wrap_content">

    <View
        android:id="@+id/otb_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/otb_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorDark" />

    <androidx.appcompat.widget.AppCompatImageView
...
